# projectex3

./: CMakeLists.txt  Command.h  Expression.cpp  Expression.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  client.cpp  client.h  connectCommand.cpp  connectCommand.h  dataManager.cpp  dataManager.h  defineVarCommand.cpp  defineVarCommand.h  ex1.cpp  ex1.h  fly.txt  funcCommand.cpp  funcCommand.h  ifCommand.cpp  ifCommand.h  lexer.cpp  lexer.h  main.cpp  openServerCommand.cpp  openServerCommand.h  printCommand.cpp  printCommand.h  server.cpp  server.h  sleepCommand.cpp  sleepCommand.h  varData.cpp  varData.h  whileCommand.cpp  whileCommand.h
